test/pass/DoWhile.java
class DoWhile{
    public static void main(String[] a){
        System.out.println("Test do while");
    }
}


// This do while statement
class Test{

    int foo;

    int Loop(){
        int aux01 ;
        do {
			aux01 = 10;
		}while(true);
		
        return 0 ;
    }

}
