test/fail/StringArrayInitialization.java
class StringArrayInitialization{
    public static void main(String[] a){
        System.out.println("Test Stirng array");
    }
}

class Test{
	String[] array;

    int a1(){
        return 0 ;
    }
	
}
